<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.0</version>
	</parent>
	<groupId>com.hackathon</groupId>
	<artifactId>hn-service</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>hn-service</name>
	<description>POC project for Spring Boot</description>
	<properties>
		<java.version>19</java.version>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
	</properties>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>native2</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-maven-plugin</artifactId>
							<configuration>
								<image>
									<builder>paketobuildpacks/builder:tiny</builder>
									<env>
										<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
									</env>
								</image>
							</configuration>
							<executions>
								<execution>
									<id>process-aot</id>
									<goals>
										<goal>process-aot</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
						<plugin>
							<groupId>org.graalvm.buildtools</groupId>
							<artifactId>native-maven-plugin</artifactId>
							<configuration>
<!--								<mainClass>HnServiceApplication.java</mainClass>-->
								<classesDirectory>${project.build.outputDirectory}</classesDirectory>
								<metadataRepository>
									<enabled>true</enabled>
								</metadataRepository>
								<requiredVersion>22.3</requiredVersion>
								<buildArgs>
									<arg>-H:IncludeResources=".*json$"</arg>
								</buildArgs>
								<useArgFile>true</useArgFile>
								<jvmArgs>
									<arg>-Xmx2048m</arg>
								</jvmArgs>
							</configuration>
							<executions>
								<execution>
									<id>add-reachability-metadata</id>
									<goals>
										<goal>add-reachability-metadata</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
</project>
